# hotel-booking-agent-v4

./: .gitignore  README.md  pyproject.toml
db/: __init__.py  diagram.md  seed.py  settings.py
db/migrations/: alembic.ini
db/migrations/alembic/: env.py
db/migrations/alembic/versions/: 0001_init_schema.py
evals/: __init__.py  cases.json  metrics.py  out.json  run.py
hotel_shopping_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
infra/: .env.example  docker-compose.yml  otel-collector-config.yaml
services/: __init__.py
services/agent/: Dockerfile
services/agent/app/: __init__.py  constraints.py  db.py  graph.py  graph_helpers.py  grounding.py  llm_schemas.py  main.py  model.py  observability.py  persistence.py  prompt.py  schemas.py  settings.py  tool_client.py
services/tools/: Dockerfile  __init__.py
services/tools/app/: __init__.py  db.py  logging.py  main.py  observability.py  schemas.py  settings.py
services/web/: Dockerfile  package-lock.json  package.json
services/web/app/: globals.css  layout.tsx  page.tsx
tests/: conftest.py  llm_stub.py
tests/contract/: test_chat_contract.py  test_tools_contract.py
tests/integration/: test_e2e_chat_flow.py
tests/replay/: golden_sessions.json  test_replay_harness.py
tests/unit/: conftest.py  test_graph_helpers.py  test_grounding.py  test_tool_client_helpers.py
